--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "axios": "^0.22.0",
     "moment": "2.13",
     "vue": "^3.0.0"
   },
@@ -19,6 +20,7 @@
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
     "@vue/test-utils": "^2.0.0-0",
+    "ts-essentials": "^9.0.0",
     "typescript": "~4.1.5",
     "vue-jest": "^5.0.0-0"
   }
