--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "axios": "^0.22.0",
     "lodash": "^4.17.21",
     "moment": "2.13",
-    "vue": "^3.0.0"
+    "vue": "^3.0.0",
+    "vue-router": "4"
   },
   "devDependencies": {
     "@types/jest": "^24.0.19",
