--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "axios": "^0.22.0",
     "lodash": "^4.17.21",
+    "marked": "^3.0.4",
     "moment": "2.13",
     "vue": "^3.0.0",
     "vue-router": "4"
@@ -17,6 +18,7 @@
   "devDependencies": {
     "@types/jest": "^24.0.19",
     "@types/lodash": "^4.14.175",
+    "@types/marked": "^3.0.1",
     "@types/moment": "2.13",
     "@vue/cli-plugin-typescript": "~4.5.0",
     "@vue/cli-plugin-unit-jest": "~4.5.0",
