feat: add highlight js via marked for markdown formating

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.22.0",
+    "highlight.js": "^11.2.0",
     "lodash": "^4.17.21",
     "marked": "^3.0.4",
     "moment": "2.13",
