--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@vue/cli-plugin-unit-jest": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/test-utils": "^2.0.0-0",
+    "chalk": "^4.1.2",
     "ts-essentials": "^9.0.0",
     "typescript": "~4.1.5",
     "vue-jest": "^5.0.0-0"
